--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenue"><span class="navbar-toggler-icon" title="NavBarButton"></span></button>
             <div class="collapse navbar-collapse" id='navmenue'>
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Startseite</a></li>
                     <li class="nav-item"><a href="Unterseiten/Portfolio.html" class="nav-link">Portfolio</a></li>
                     <li class="nav-item"><a href="Unterseiten/Services.html" class="nav-link">Services</a></li>
                     <li class="nav-item"><a href="Unterseiten/SocialMedia.html" class="nav-link">Social Media</a></li>
-                    <li class="nav-item"><a href="Unterseiten/Contact.html" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="Unterseiten/Contact.html" class="nav-link">Kontakt</a></li>
                 </ul>
             </div>
         </div>
@@ -48,13 +48,13 @@
           <div class="col-md p-5">
               <h2>Pascal - Avatok</h2>
               <p class="lead">
-                Hello, my name is Avatok (Pascal) and I'm 20 years old.
+                Hallo, mein Name ist Avatok (Pascal) und ich bin 20 Jahre alt.
               </p>
               <p class="lead">
-                I live in Austria and have been working with computer hardware and software since my youth.
+                Ich lebe in Österreich und arbeite seit meiner Jugend mit Computerhardware und -software.
               </p>
               <a class="btn btn-light mt-3" id="Q1" onclick="ScrollDown()" data-bs-toggle="collapse" data-bs-target="#question-one">
-                <i class="bi bi-chevron-right">Read More</i>
+                <i class="bi bi-chevron-right">Mehr über mich</i>
               </a>
           </div>
         </div>
@@ -65,7 +65,7 @@
     <section class="p-5" style="background-color: #caf8a3">
       <div class="container d-md-flex justify-content-center align-items-center">
         <div class="">
-          <h3 class="mb-3 mb-md-0 justify-content-center align-items-center">Questions & Answers</h3>
+          <h3 class="mb-3 mb-md-0 justify-content-center align-items-center">Fragen & Antworten</h3>
         </div>
       </div>
     </section>
@@ -80,28 +80,36 @@
                 <button class="accordion-button collapsed" id="Q1" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">Main questions</button>
                   <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
                   <div class="accordion-body">
-                      <h3>Main Information</h3>
+                      <h3>Algemeines</h3>
                     <ul>
                       <li><b>Name: </b> Pascal</li>
-                      <li><b>Age: </b> 20</li>
-                      <li><b>Residence: </b> austria</li>
-                      <li><b>Work: </b> Student</li>
+                      <li><b>Alter: </b> 20</li>
+                      <li><b>Wohnort: </b> austria</li>
+                      <li><b>Arbeit: </b> Student</li>
                     </ul>
-                      <h3>Languages</h3>
+                      <h3>Sprachen</h3>
                     <ul>
-                        <li>German / Deutsch</li>
-                        <li>English / Englisch</li>
+                        <li>Deutsch</li>
+                        <li>Englisch</li>
                     </ul>
-                        <h3>School Career</h3>
+                        <h3>Schullaufbahn</h3>
                     <ul>
-                        <li>9 years of compulsory schooling</li>
-                        <li>3.5 years of technical school for Information Technology, including the thesis</li>
-                        <li>I am currently attending a preparatory course for the Matura in Computer Science</li>
+                        <li>9 Jahre Pflichtschule</li>
+                        <li>3,5 Jahre Fachschule für Informationstechnik mit Spezialisierung in Medientechnik</li>
+                        <li>Derzeit besuche ich den Aufbaulehrgang für Informatik mit Spezialisierung in Software Entwciklung und Recht/Wirtschaft</li>
                     </ul>
-                      <h3>Certifications</h3>
+                        <h3>Arbeitserfahrung</h3>
                     <ul>
-                        <li><b>Network Technology </b>CCNAv7: Introduction to Networks</li>
-                        <li><b>Network Technology </b>CCNAv7: Switching, Routing, and Wireless Essentials</li>
+                        <li><b>1 Monat Praktikum (2021)</b> Datenanalyse von Bau Projekte</li>
+                        <li><b>3 Monate Praktikum (2022)</b> Web Development mit Wordpress</li>
+                        <li><b>Jeden Dezember (Seit 2021)</b> Pyrotechnik Einzelhandel & Großhandel</li>
+                    </ul>
+                      <h3>Zertifikate</h3>
+                    <ul>
+                        <li><b>Netzwerktechnik </b>CCNAv7: Introduction to Networks</li>
+                        <li><b>Netzwerktechnik </b>CCNAv7: Switching, Routing, and Wireless Essentials</li>
+                        <br>
+                        <li><b>Gefahrengut Transport </b>Basis und Klasse 1</li>
                     </ul>
                   </div>
                   </div>
@@ -163,7 +171,7 @@
                     Case - Montech AIR 100 LITE Black
 <br>
 <br>
-                    <b>Other Stuff:</b><br>
+                    <b>Sonstiges:</b><br>
                     Camera - IPhone 15 Pro Max <br>
                   </p>
                   </div>
@@ -369,12 +377,12 @@
         <div class="row text-center">
           <div class="col-md-4">
             <a href="Unterseiten/Imprint.html">
-              <p class="lead" style="color:#caf8a3">Imprint/privacy policy</p>
+              <p class="lead" style="color:#caf8a3">IImpressum/Datenschutzerklärung</p>
             </a>
           </div>
     
           <div class="col-md-4">
-            <p class="lead">Copyright &copy; 2023 Pascal - Avatok</p>
+            <p class="lead">Copyright &copy; 2021 Pascal - Avatok</p>
           </div>
     
           <div class="col-md-4">
