--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
             <!--Item1-->
             <div class="accordion-item">
               <div class="accordion-header">
-                <button class="accordion-button collapsed" id="Q1" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">Main questions</button>
+                <button class="accordion-button collapsed" id="Q1" type="button" data-bs-toggle="collapse" data-bs-target="#question-one">Allgemeines über mich</button>
                   <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
                   <div class="accordion-body">
-                      <h3>Algemeines</h3>
+                      <h3>Allgemeines</h3>
                     <ul>
                       <li><b>Name: </b> Pascal</li>
                       <li><b>Alter: </b> 20</li>
@@ -119,7 +119,7 @@
             <!--Item2-->
             <div class="accordion-item">
               <div class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">Which Hardware do I use?</button>
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-two">Welche Hardware benutze ich?</button>
                   <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#questions">
                   <div class="accordion-body">
                   <p>
@@ -182,7 +182,7 @@
             <!--Item3-->
             <div class="accordion-item">
               <div class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">Which Software do I use?</button>
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-three">Welche Software benutze ich?</button>
                   <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
                     <div class="accordion-body">
                       <div class="container">
@@ -348,7 +348,7 @@
             <!--Item5-->
             <div class="accordion-item">
                 <div class="accordion-header">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five">What do I still want to learn?</button>
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#question-five">Was möchte ich noch lernen?</button>
                     <div id="question-five" class="accordion-collapse collapse" data-bs-parent="#questions">
                       <div class="accordion-body">
                         <div class="container">
