--- a/Unterseiten/Imprint.html
+++ b/Unterseiten/Imprint.html
@@ -28,11 +28,11 @@
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navmenue" title="NavBarButton"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id='navmenue'>
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a href="../Index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="../Index.html" class="nav-link">Startseite</a></li>
                     <li class="nav-item"><a href="Portfolio.html" class="nav-link">Portfolio</a></li>
                     <li class="nav-item"><a href="Services.html" class="nav-link">Services</a></li>
                     <li class="nav-item"><a href="SocialMedia.html" class="nav-link">Social Media</a></li>
-                    <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="Contact.html" class="nav-link">Kontakt</a></li>
                 </ul>
             </div>
         </div>
@@ -42,27 +42,27 @@
     <div class="Main">
     <section class="p-5">
         <div class="container">
-            <h1 id="Imprint">Imprint</h1>
-            <h2>WEBSITE OWNER</h2>
+            <h1 id="Imprint">Impressum</h1>
+            <h2>WEBSITE BESITZER</h2>
             <p>
                 Pascal Z. (Avatok)<br>
-                Vienna<br>
-                Austria<br>
-                Email Address: <a href="mailto:avatok.business@gmail.com" class="link"><strong>avatok.business@gmail.com</strong></a><br>
+                Wien<br>
+                Österreich<br>
+                Email: <a href="mailto:avatok.business@gmail.com" class="link"><strong>avatok.business@gmail.com</strong></a><br>
             </p>
             <br>
             <p>
-                Responsible for content: Pascal Z. (Avatok)
+                Verantwortlich für den Inhalt: Pascal Z. (Avatok)
             </p>
             <br>
             <p>
-                European Commission platform for Online Dispute Resolution (ODR) for consumers: <a href="https://ec.europa.eu/consumers/odr/" class="link">https://ec.europa.eu/consumers/odr/</a>.
-                We are neither willing nor obligated to participate in a dispute resolution procedure before a consumer arbitration board.
+                Plattform der Europäischen Kommission zur Online-Streitbeilegung (ODR) für Verbraucher: <a href="https://ec.europa.eu/consumers/odr/" class="link">https://ec.europa.eu/consumers/odr/</a>.
+                Wir sind weder bereit noch verpflichtet, an einem Streitbeilegungsverfahren vor einer Verbraucherschlichtungsstelle teilzunehmen.
             </p>
             <br>
             <br>
             <br>
-            <h1 id="privacypolicy">Privacy Policy</h1>
+            <h1 id="privacypolicy">Datenschutzerklärung</h1>
 <br>
               <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
@@ -419,12 +419,12 @@
         <div class="row text-center">
           <div class="col-md-4">
             <a href="Imprint.html">
-              <p class="lead" style="color:#caf8a3">Imprint/privacy policy</p>
+              <p class="lead" style="color:#caf8a3">Impressum/Datenschutzerklärung</p>
             </a>
           </div>
     
           <div class="col-md-4">
-            <p class="lead">Copyright &copy; 2023 Pascal - Avatok</p>
+            <p class="lead">Copyright &copy; 2021 Pascal - Avatok</p>
           </div>
     
           <div class="col-md-4">
