--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -38,7 +38,7 @@
                   <li class="nav-item"><a href="#" class="nav-link">Portfolio</a></li>
                   <li class="nav-item"><a href="Services.html" class="nav-link">Services</a></li>
                   <li class="nav-item"><a href="SocialMedia.html" class="nav-link">Social Media</a></li>
-                  <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
+                  <li class="nav-item"><a href="Contact.html" class="nav-link">Kontakt</a></li>
               </ul>
           </div>
       </div>
