--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -247,7 +247,7 @@
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <i class="bi bi-card-checklist"></i>
             <h4 class="h4 mb-2">Web Development & Coding</h4>
-            <p>Detailed overview for Web Development & Coding</p>
+            <p>Detaillierte Übersicht über Webentwicklung und Programmierung</p>
             <ul class="list-unstyled list-line">
               <li>HTML/CSS</li>
               <li>JavaScript and PHP</li>
@@ -259,7 +259,7 @@
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <i class="bi bi-binoculars"></i>
             <h4 class="h4 mb-2">Coding</h4>
-            <p>Detailed overview for Coding and Programming</p>
+            <p>Detaillierte Übersicht über Programmierung und Coding</p>
             <ul class="list-unstyled list-line">
               <li>Lua</li>
               <li>Python (for micro controller)</li>
@@ -268,7 +268,7 @@
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <i class="bi bi-brightness-high"></i>
             <h4 class="h4 mb-2">Adobe Media Design</h4>
-            <p>Detailed overview for Adobe Media Design and Adobe Creative Cloud</p>
+            <p>Detaillierte Übersicht über Adobe Media Design und Adobe Creative Cloud</p>
             <ul class="list-unstyled list-line">
               <li>Photoshgop</li>
               <li>Premiere Pro</li>
@@ -280,7 +280,7 @@
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <i class="bi bi-calendar4-week"></i>
             <h4 class="h4 mb-2">Other</h4>
-            <p>Detailed overview of other things I want to improve</p>
+            <p>Detaillierte Übersicht über andere Dinge, die ich verbessern möchte</p>
             <ul class="list-unstyled list-line">
               <li>Joomla</li>
               <li>C++ / C / C#</li>
@@ -302,12 +302,12 @@
         <div class="row text-center">
           <div class="col-md-4">
             <a href="Imprint.html">
-              <p class="lead" style="color:#caf8a3">Imprint/privacy policy</p>
+              <p class="lead" style="color:#caf8a3">Impressum/Datenschutzerklärung</p>
             </a>
           </div>
     
           <div class="col-md-4">
-            <p class="lead">Copyright &copy; 2023 Pascal - Avatok</p>
+            <p class="lead">Copyright &copy; 2021 Pascal - Avatok</p>
           </div>
     
           <div class="col-md-4">
