--- a/Unterseiten/Services.html
+++ b/Unterseiten/Services.html
@@ -38,7 +38,7 @@
                   <li class="nav-item"><a href="Portfolio.html" class="nav-link">Portfolio</a></li>
                   <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
                   <li class="nav-item"><a href="SocialMedia.html" class="nav-link">Social Media</a></li>
-                  <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
+                  <li class="nav-item"><a href="Contact.html" class="nav-link">Kontakt</a></li>
               </ul>
           </div>
       </div>
@@ -50,8 +50,8 @@
       <div class="container">
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
-            <h3 class="h3 heading">My Services</h3>
-            <p>The services I offer are listed below, if you have any additional enquiries, please contact me</p>
+            <h3 class="h3 heading">Meine Dienstleistungen</h3>
+            <p>Die Dienstleistungen, die ich anbiete, sind unten aufgeführt. Bei weiteren Fragen können Sie mich gerne kontaktieren.</p>
           </div>
         </div>
         <div class="row">
@@ -59,7 +59,7 @@
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <i class="bi bi-card-checklist"></i>
             <h4 class="h4 mb-2">Web Development & Coding</h4>
-            <p>Detailed overview for Web Development & Coding</p>
+            <p>Ausführliche Übersicht über Webentwicklung & Programmierung</p>
             <ul class="list-unstyled list-line">
               <li>HTML/CSS</li>
               <li>JavaScript and PHP</li>
@@ -71,7 +71,7 @@
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <i class="bi bi-binoculars"></i>
             <h4 class="h4 mb-2">Coding</h4>
-            <p>Detailed overview for Coding and Programming</p>
+            <p>"Ausführliche Übersicht über Programmierung und Codierung</p>
             <ul class="list-unstyled list-line">
               <li>Python (I am still Learning)</li>
               <li>XXX</li>
@@ -81,7 +81,7 @@
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <i class="bi bi-brightness-high"></i>
             <h4 class="h4 mb-2">Adobe Media Design</h4>
-            <p>Detailed overview for Adobe Media Design and Adobe Creative Cloud</p>
+            <p>Ausführliche Übersicht über Adobe Media Design und Adobe Creative Cloud</p>
             <ul class="list-unstyled list-line">
               <li>Photoshop</li>
               <li>Premiere Pro</li>
@@ -93,7 +93,7 @@
           <div class="col-12 col-sm-6 col-md-6 col-lg-3">
             <i class="bi bi-calendar4-week"></i>
             <h4 class="h4 mb-2">Other</h4>
-            <p>Detailed overview of other things I want to improve</p>
+            <p>Ausführliche Übersicht über andere Dinge, die ich noch erlernen möchte</p>
             <ul class="list-unstyled list-line">
               <li>XXX</li>
               <li>XXX</li>
@@ -107,7 +107,7 @@
     <!-- Carousel -->
     <section class="p-5">
         <div class="container">
-            <h2>Partner Projects?</h2>
+            <h2>Partner Projekte?</h2>
             <br>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -143,9 +143,9 @@
     <!-- Call to Action -->
     <section class="p-5 text-center">
         <div class="container">
-            <h2>Interested in my work?</h2>
-            <p>Feel free to reach out to me via my contact page or follow me on my social media channels!</p>
-            <a href="Contact.html" class="btn btn-lg rounded-pill" style="background-color: #caf8a3; color: #000;">Contact Me</a>
+            <h2>Interessiert an meiner Arbeit?</h2>
+            <p>Zögere nicht, mich über meine Kontaktseite zu erreichen oder mir auf meinen Social-Media-Kanälen zu folgen!</p>
+            <a href="Contact.html" class="btn btn-lg rounded-pill" style="background-color: #caf8a3; color: #000;">Kontakiere mich</a>
         </div>
     </section>
     <!-- End Call to Action -->
@@ -156,12 +156,12 @@
             <div class="row text-center">
                 <div class="col-md-4">
                     <a href="Imprint.html">
-                        <p class="lead" style="color:#caf8a3">Imprint / Privacy Policy</p>
+                        <p class="lead" style="color:#caf8a3">Impressum / Datenschutzerklärung</p>
                     </a>
                 </div>
 
                 <div class="col-md-4">
-                    <p class="lead">Copyright &copy; 2023 Pascal - Avatok</p>
+                    <p class="lead">Copyright &copy; 2021 Pascal - Avatok</p>
                 </div>
 
                 <div class="col-md-4">
