--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -26,11 +26,11 @@
             </button>
             <div class="collapse navbar-collapse" id='navmenue'>
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a href="../index.html" class="nav-link">Home</a></li>
+                    <li class="nav-item"><a href="../index.html" class="nav-link">Startseite</a></li>
                     <li class="nav-item"><a href="Portfolio.html" class="nav-link">Portfolio</a></li>
                     <li class="nav-item"><a href="Services.html" class="nav-link">Services</a></li>
                     <li class="nav-item"><a href="#" class="nav-link">Social Media</a></li>
-                    <li class="nav-item"><a href="Contact.html" class="nav-link">Contact</a></li>
+                    <li class="nav-item"><a href="Contact.html" class="nav-link">Kontakt</a></li>
                 </ul>
             </div>
         </div>
@@ -123,9 +123,9 @@
     <!-- Call to Action -->
     <section class="p-5 text-center">
         <div class="container">
-            <h2>Interested in my work?</h2>
-            <p>Feel free to reach out to me via my contact page or follow me on my social media channels!</p>
-            <a href="Contact.html" class="btn btn-lg rounded-pill" style="background-color: #caf8a3; color: #000;">Contact Me</a>
+            <h2>Interessiert an meiner Arbeit</h2>
+            <p>Zögere nicht, mich über meine Kontaktseite zu erreichen oder mir auf meinen Social-Media-Kanälen zu folgen!</p>
+            <a href="Contact.html" class="btn btn-lg rounded-pill" style="background-color: #caf8a3; color: #000;">Kontaktiere mich</a>
         </div>
     </section>
     <!-- End Call to Action -->
@@ -136,12 +136,12 @@
             <div class="row text-center">
                 <div class="col-md-4">
                     <a href="Imprint.html">
-                        <p class="lead" style="color:#caf8a3">Imprint / Privacy Policy</p>
+                        <p class="lead" style="color:#caf8a3">Impressum / Datenschutzerklärung</p>
                     </a>
                 </div>
 
                 <div class="col-md-4">
-                    <p class="lead">Copyright &copy; 2023 Pascal - Avatok</p>
+                    <p class="lead">Copyright &copy; 2021 Pascal - Avatok</p>
                 </div>
 
                 <div class="col-md-4">
