--- a/Unterseiten/Services.html
+++ b/Unterseiten/Services.html
@@ -50,7 +50,7 @@
       <div class="container">
         <div class="row justify-content-center text-center mb-4">
           <div class="col-5">
-            <h3 class="h3 heading">Meine Dienstleistungen</h3>
+            <h3 class="h3 heading">Dienstleistungen</h3>
             <p>Die Dienstleistungen, die ich anbiete, sind unten aufgeführt. Bei weiteren Fragen können Sie mich gerne kontaktieren.</p>
           </div>
         </div>
@@ -107,8 +107,7 @@
     <!-- Carousel -->
     <section class="p-5">
         <div class="container">
-            <h2>Partner Projekte?</h2>
-            <br>
+            <h2>Partner Projekte</h2>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
