--- a/Unterseiten/SocialMedia.html
+++ b/Unterseiten/SocialMedia.html
@@ -87,8 +87,7 @@
     <!-- Carousel -->
     <section class="p-5">
         <div class="container">
-            <h2>Partner Projects?</h2>
-            <br>
+            <h2>Partner Projekte</h2>
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
