--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <b>Desktop PC:</b><br>
                     CPU - Ryzen 9 9900x (12C/24T)<br>
                     AIO - Lian Li Hydroshift LCD 360 ARGB<br>
-                    GPU - Palit RTX 4070 12GB GDDR6<br>
+                    GPU - Gigabyte RTX 5070Ti 12GB GDDR7<br>
                     MB - Gigabyte B850 AORUS ELITE WIFI7<br>
                     RAM - 4x G.SKILL 16GB DDR5 6000MHz CL30<br>
                     SSD1 - KIOXIA Exceria Plus G4 1TB - PCIe 5.0<br>
