--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -222,9 +222,18 @@
         <a href="https://avatok.github.io/Small_JS_Projects/" class="item-wrap fancybox">
           <div class="work-info">
             <h3>Small JavaScript Projects</h3>
-            <span>HTML & Java Script</span>
+            <span>HTML, CSS & Java Script</span>
           </div>
           <img class="img-fluid" alt="Small JavaScript Projects" src="../Grafiken/Portfolio/JavaScript.png">
+        </a>
+      </div>
+      <div class="item coding col-6 col-sm-6 col-md-4 col-lg-3 mb-4">
+        <a href="https://avatok.github.io/PUBG-Secret-Rooms/" class="item-wrap fancybox">
+          <div class="work-info">
+            <h3>PUBG Secret Rooms</h3>
+            <span>HTML, CSS & Java Script</span>
+          </div>
+          <img class="img-fluid" alt="PUBG Secret Rooms" src="../Grafiken/Portfolio/PUBG.png">
         </a>
       </div>
     </div>
@@ -331,3 +340,4 @@
 </body>
 
 </html>
+
