--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -195,7 +195,7 @@
         <a href="https://www.feinesfutter.at/" class="item-wrap fancybox">
           <div class="work-info">
             <h3>Wordpress WooCoomerce Betreuung</h3>
-            <span>WooCoomerce Artikel einfügen, bearbeiten und löschen</span>
+            <span>WooCoomerce Verwaltung</span>
           </div>
           <img class="img-fluid" alt="Feines Futter" src="../Grafiken/Portfolio/FeinesFutter.png">
         </a>
@@ -340,4 +340,5 @@
 </body>
 
 </html>
+
 
