--- a/Unterseiten/Portfolio.html
+++ b/Unterseiten/Portfolio.html
@@ -204,7 +204,7 @@
         <a href="https://avatok.github.io/WebSnakeGame/" class="item-wrap fancybox">
           <div class="work-info">
             <h3>Web Snake Game</h3>
-            <span>HTML, CSS, JavaScript und Bootstrap</span>
+            <span>HTML, CSS & JavaScript</span>
           </div>
           <img class="img-fluid" alt="Web Snake Game" src="../Grafiken/Portfolio/Snake.png">
         </a>
@@ -340,5 +340,6 @@
 </body>
 
 </html>
+
 
 
